<resources>
    <string name="app_name">TMS Android</string>
    <string name="homework6">HOMEWORK 6\nthe one with flags</string>
    <string name="homework7">HOMEWORK 7\nthe one with countdown</string>
    <string name="poland">Poland</string>
    <string name="germany">Germany</string>
    <string name="france">France</string>
    <string name="latvia">Latvia</string>
    <string name="finland">Finland</string>
    <string name="tap_me">Tap Me</string>
    <string name="enter">Войти</string>
    <string name="login_input">Введите логин</string>
    <string name="password_input">Введите пароль</string>
    <string name="login">Логин:</string>
    <string name="password">Пароль:</string>
    <string name="user_info">Информация о пользователе</string>
    <string name="close">Close</string>
    <string name="homework10">HOMEWORK 10\nthe one with candies</string>
    <string name="homework12">HOMEWORK 12\nthe one with fragments</string>
    <string name="change_fragment">Change fragment</string>
    <string name="homework13">HOMEWORK 13\nthe one with candy fragments</string>
    <string name="toast_last_candy">Последняя конфета: %s,\nштрих-код: %d</string>
    <string name="toast_no_candy">Вы ещё не выбирали конфету</string>
    <string name="homework16">HOMEWORK 16\nthe one with messages</string>
    <string name="homework17">HOMEWORK 17\nthe one with currencies</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="number_of_currencies">Число валют</string>
    <string-array name="spinner_sorting">
        <item>Имя</item>
        <item>ID</item>
    </string-array>
    <string name="homework19">HOMEWORK 19\nthe one with alarm clock</string>
    <string name="save">save</string>
    <string name="sound">Sound</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_created">Alarm created</string>
    <string name="enter_location">Enter location</string>
    <string name="enter_city">Enter your city</string>
    <string name="confirm">Confirm</string>
    <string name="homework20">HOMEWORK 20\nlocation for weather widget</string>
    <string name="no_such_city">There are no such city in database.\nTry again!</string>
    <string name="wind">Wind:</string>
</resources>