<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center"
                android:paddingEnd="15dp"
                android:text="@string/poland" />

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:background="@color/black"
                    android:orientation="vertical"
                    android:paddingStart="1dp"
                    android:paddingTop="1dp"
                    android:paddingEnd="1dp"
                    android:paddingBottom="1dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/red" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center"
                android:paddingEnd="15dp"
                android:text="@string/germany" />

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="166.7dp"
                    android:layout_height="100dp"
                    android:background="@color/black"
                    android:orientation="vertical"
                    android:paddingStart="1dp"
                    android:paddingTop="1dp"
                    android:paddingEnd="1dp"
                    android:paddingBottom="1dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/black" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/red" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/yellow" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center"
                android:paddingEnd="15dp"
                android:text="@string/france" />

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:background="@color/black"
                    android:paddingStart="1dp"
                    android:paddingTop="1dp"
                    android:paddingEnd="1dp"
                    android:paddingBottom="1dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/fr_blue" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/fr_red" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center"
                android:paddingEnd="15dp"
                android:text="@string/finland" />

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="163.6dp"
                    android:layout_height="100dp"
                    android:background="@color/black"
                    android:orientation="vertical"
                    android:paddingStart="1dp"
                    android:paddingTop="1dp"
                    android:paddingEnd="1dp"
                    android:paddingBottom="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_weight="4">

                        <View
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:background="@color/white" />

                        <View
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:background="@color/fin_blue" />

                        <View
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10"
                            android:background="@color/white" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_weight="3"
                        android:background="@color/fin_blue" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_weight="4">

                        <View
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:layout_weight="5"
                            android:background="@color/white" />

                        <View
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:background="@color/fin_blue" />

                        <View
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10"
                            android:background="@color/white" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center"
                android:paddingEnd="15dp"
                android:text="@string/latvia" />

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:background="@color/black"
                    android:orientation="vertical"
                    android:paddingStart="1dp"
                    android:paddingTop="1dp"
                    android:paddingEnd="1dp"
                    android:paddingBottom="1dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_weight="2"
                        android:background="@color/lt_red" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_weight="1"
                        android:background="@color/white" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_weight="2"
                        android:background="@color/lt_red" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
